--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-one:
-  username: MyString
-  password: MyString
-
-two:
-  username: MyString
-  password: MyString
+# one:
+#   column: value
+#
+# two:
+#   column: value
